--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gsap": "^3.12.5",
     "next": "14.2.14",
     "next-cloudinary": "^6.13.0",
+    "nextjs-toploader": "^3.6.15",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
